@@ -1,4 +1,4 @@
-<!-- start of $Id: footer.php,v 1.20 2007/02/02 08:47:18 goddess_skuld Exp $ -->
+<!-- start of $Id: footer.php,v 1.21 2008/02/10 21:02:10 goddess_skuld Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -11,7 +11,7 @@ else {
 ?>
     </div>
         <div id="footer">
-            <a href="javascript:void(0);" onclick="window.open('http://nocc.sourceforge.net');">
+            <a href="http://nocc.sourceforge.net" target="_blank">
                 <img src="themes/<?php echo str_replace('..','',convertLang2Html($_SESSION['nocc_theme'])) ?>/img/button.png" id="footerLogo" alt="Powered by NOCC" />
             </a>
         </div>
@@ -20,4 +20,4 @@ else {
 <?php
 }
 ?>
-<!-- end of $Id: footer.php,v 1.20 2007/02/02 08:47:18 goddess_skuld Exp $ -->
+<!-- end of $Id: footer.php,v 1.21 2008/02/10 21:02:10 goddess_skuld Exp $ -->
