@@ -1,4 +1,4 @@
-<!-- start of $Id: html_inbox.php,v 1.58 2007/09/13 22:39:28 gerundt Exp $ -->
+<!-- start of $Id: html_inbox.php,v 1.59 2007/09/25 22:04:07 gerundt Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -10,6 +10,11 @@
     if ($tmp['new'] != '' && $tmp['new'] != null && $tmp['new'] != "&nbsp;") {
       $new_class = ' new';
     }
+  }
+  
+  $target_blank = '';
+  if (isset($user_prefs->seperate_msg_win) && $user_prefs->seperate_msg_win) {
+    $target_blank = ' target="_blank"';
   }
   
   echo '<tr class="'.$even_odd_class.$new_class.'">';
@@ -26,11 +31,7 @@
         echo convertMailData2Html(display_address($tmp['to']), 55);
         break;
       case '3': //Subject...
-        if(isset($user_prefs->seperate_msg_win) && $user_prefs->seperate_msg_win) {
-          echo '<a href="javascript:void(0);" onclick="window.open(\''.$_SERVER['PHP_SELF'].'?action=aff_mail&amp;mail='.$tmp['number'].'&amp;verbose=0&amp;\');" title="'; echo $tmp['subject']? convertMailData2Html($tmp['subject']) : $html_nosubject; echo '">'; echo $tmp['subject']? convertMailData2Html($tmp['subject'], 55) : $html_nosubject; echo '</a>';
-        } else {
-          echo '<a href="'.$_SERVER['PHP_SELF'].'?action=aff_mail&amp;mail='.$tmp['number'].'&amp;verbose=0&amp;" title="'; echo $tmp['subject']? convertMailData2Html($tmp['subject']) : $html_nosubject; echo '">'; echo $tmp['subject']? convertMailData2Html($tmp['subject'], 55) : $html_nosubject; echo '</a>';
-        }
+        echo '<a href="'.$_SERVER['PHP_SELF'].'?action=aff_mail&amp;mail='.$tmp['number'].'&amp;verbose=0&amp;" title="'; echo $tmp['subject']? convertMailData2Html($tmp['subject']) : $html_nosubject; echo '"'.$target_blank.'>'; echo $tmp['subject']? convertMailData2Html($tmp['subject'], 55) : $html_nosubject; echo '</a>';
         break;
       case '4': //Date...
         echo $tmp['date'] . '&nbsp;' . $tmp['time'];
@@ -49,4 +50,4 @@
   }
   echo '</tr>';
 ?>
-<!-- end of $Id: html_inbox.php,v 1.58 2007/09/13 22:39:28 gerundt Exp $ -->
+<!-- end of $Id: html_inbox.php,v 1.59 2007/09/25 22:04:07 gerundt Exp $ -->
